--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,19 @@
 {
   "compilerOptions": {
-    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
     "isolatedModules": true,
-    "lib": ["ES2020"],
-    "target": "ES2020"
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
+    "outDir": "dist",
+    "sourceMap": true,
+    "declaration": true,
+    "lib": ["es2022"]
   }
 }
