--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "isolatedModules": true,
     "strict": true,
     "noUncheckedIndexedAccess": true,
+    "noImplicitAny": true,
     "moduleResolution": "NodeNext",
     "module": "NodeNext",
     "outDir": "dist",
